# dms-toolkit-rs

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
examples/: index.ts  with-tinypool.ts  worker.mjs
examples/files/: csv.csv  text-v2.txt  text.txt
napi/: index.d.ts  index.js
src/: lib.rs
src/core/: handler.rs  mod.rs  similarity.rs  text.rs
src/handlers/: docx.rs  image.rs  mod.rs  pdf.rs  text.rs  xlsx.rs
src/models/: file.rs
