[package]
name = "dms-toolkit-rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
calamine = "0.32.0"
chardetng = "0.1.17"
dashmap = "6.1.0"
docx-rs = "0.4.18"
encoding_rs = "0.8.35"
image = "0.25.9"
napi = "3.6.1"
napi-derive = "3.4.0"
ocrs = "0.11.0"
pdf-extract = "0.10.0"
rayon = "1.11.0"
rten = "0.22.1"
strsim = "0.11.1"
